force-app/main/default/objects/Contract/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The link to the account record to identify the external party to this agreement</description>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Account)</relationshipLabel>
    <relationshipName>SFCon_R00N50000001Xl0UEAS</relationshipName>
    <type>Lookup</type>
</CustomField>