force-app/main/default/objects/Contract/fields/Agreement_Category__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Category__c</fullName>
    <description>Used to categorize agreement types.  When setting up a new agreement type make sure to seect approrpiate values for that agreement type and to set the right default</description>
    <inlineHelpText>Standard - no changes to Contract
Customised - 3rd Party paper, or requested changes in Terms and Conditions</inlineHelpText>
    <label>Contract Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Customised</fullName>
            </value>
            <value>
                <fullName>Rebate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>