force-app/main/default/objects/Contract/fields/APT_Commercial_Contact__c.field-meta.xml
<CustomField>
    <fullName>APT_Commercial_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer Commercial Contact</description>
    <inlineHelpText>Customer Commercial Contact</inlineHelpText>
    <label>Customer Contact For Notices</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Customer Contact For Notices)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>