force-app/main/default/objects/Contract/fields/APT_Contract_Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>APT_Contract_Extension_Date__c</fullName>
    <description>Date field in the Apttus__APTS_Agreement__c object that will store the latest contract extension date from its child SAP_Contract__c.</description>
    <label>Contract Extension Date</label>
    <type>Date</type>
</CustomField>