force-app/main/default/objects/Contract/fields/APT_Credit_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>APT_Credit_Form_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this checkbox if credit form was returned by the Customer</inlineHelpText>
    <label>Credit Form Received</label>
    <type>Checkbox</type>
</CustomField>