force-app/main/default/objects/Contract/fields/APT_Date_of_Generation_Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>APT_Date_of_Generation_Rate_Card__c</fullName>
    <label>Date Of Generation Rate Card</label>
    <length>100</length>
    <type>Text</type>
</CustomField>