force-app/main/default/objects/Contract/fields/APT_Expiring__c.field-meta.xml
<CustomField>
    <fullName>APT_Expiring__c</fullName>
    <formula>AND(
Contract_End_Date__c -  TODAY()  &lt;=   90,
Contract_End_Date__c -  TODAY() &gt; 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiring?</label>
    <type>Checkbox</type>
</CustomField>