force-app/main/default/objects/Contract/fields/APT_Local_Country_Volume_or_Estimated__c.field-meta.xml
<CustomField>
    <fullName>APT_Local_Country_Volume_or_Estimated__c</fullName>
    <inlineHelpText>Local Country Letters Volume or Estimated Revenue</inlineHelpText>
    <label>Local Country Volume Or Estimated Rev</label>
    <length>200</length>
    <type>Text</type>
</CustomField>