force-app/main/default/objects/Contract/fields/APT_Manual_Contract__c.field-meta.xml
<CustomField>
    <fullName>APT_Manual_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be ticked manually by Sales users if the pricing/products aren&apos;t configured in Apttus shopping cart</description>
    <inlineHelpText>Tick this box for products that aren’t configured in Apttus. Ie StarTrack, Decipha</inlineHelpText>
    <label>Manual Contract?</label>
    <type>Checkbox</type>
</CustomField>