force-app/main/default/objects/Contract/fields/APT_New_Pricing__c.field-meta.xml
<CustomField>
    <fullName>APT_New_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Pricing?</label>
    <type>Checkbox</type>
</CustomField>