force-app/main/default/objects/Contract/fields/APT_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>APT_Next_Steps__c</fullName>
    <inlineHelpText>This field will update &apos;Next Steps&apos; on Opportunity</inlineHelpText>
    <label>Opportunity Next Steps</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Prepare contract</fullName>
            </value>
            <value>
                <fullName>Negotiate to achieve alignment</fullName>
            </value>
            <value>
                <fullName>Seek assistance to close the deal</fullName>
            </value>
            <value>
                <fullName>Finalise contract terms &amp; conditions</fullName>
            </value>
            <value>
                <fullName>Present final contract to customer</fullName>
            </value>
            <value>
                <fullName>Confirm agreement with final contract terms</fullName>
            </value>
            <value>
                <fullName>Sign contract</fullName>
            </value>
            <value>
                <fullName>Review outcome and lessons&apos;s learnt</fullName>
            </value>
            <value>
                <fullName>Commence implementation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>