force-app/main/default/objects/Contract/fields/APT_of_times_extension_was_approved__c.field-meta.xml
<CustomField>
    <fullName>APT_of_times_extension_was_approved__c</fullName>
    <description>Used by extension approval process</description>
    <inlineHelpText>Calculates number of times extension was approved</inlineHelpText>
    <label># of times extension was approved</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>