force-app/main/default/objects/Contract/fields/APT_OwnerEqualsAccountOwner__c.field-meta.xml
<CustomField>
    <fullName>APT_OwnerEqualsAccountOwner__c</fullName>
    <description>This formula field returns false if the contract owner is not equal to related account owner</description>
    <formula>IF(OwnerId  &lt;&gt; Account__r.OwnerId , false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerEqualsAccountOwner</label>
    <type>Checkbox</type>
</CustomField>