force-app/main/default/objects/Contract/fields/APT_Processed_By__c.field-meta.xml
<CustomField>
    <fullName>APT_Processed_By__c</fullName>
    <description>Created for Ariba mapping purposes. Reused for future records with Sellers input</description>
    <inlineHelpText>Ariba migrated field</inlineHelpText>
    <label>Processed By</label>
    <type>TextArea</type>
</CustomField>