force-app/main/default/objects/Contract/fields/APT_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Product_Type__c</fullName>
    <description>Created for Ariba mapping purposes. Reused for future records with Sellers input</description>
    <inlineHelpText>Ariba migrated field</inlineHelpText>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mail, Letters or Parcel</fullName>
            </value>
            <value>
                <fullName>Agency Services</fullName>
            </value>
            <value>
                <fullName>APMS</fullName>
            </value>
            <value>
                <fullName>PostConnect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>