force-app/main/default/objects/Contract/fields/APT_Provisioned_in_SAP_Date__c.field-meta.xml
<CustomField>
    <fullName>APT_Provisioned_in_SAP_Date__c</fullName>
    <description>Used for Provisioning in SAP</description>
    <inlineHelpText>Indicate when was provisioning done in SAP. If you leave this field empty, system will populate it with the date when the checkbox was checked.</inlineHelpText>
    <label>Provisioned In SAP Date</label>
    <type>Date</type>
</CustomField>