force-app/main/default/objects/Contract/fields/APT_Ratecards_Created__c.field-meta.xml
<CustomField>
    <fullName>APT_Ratecards_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ratecards Created</label>
    <type>Checkbox</type>
</CustomField>