force-app/main/default/objects/Contract/fields/APT_Rebate_Form_For__c.field-meta.xml
<CustomField>
    <fullName>APT_Rebate_Form_For__c</fullName>
    <label>Rebate Form For</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Print Post</fullName>
                <default>true</default>
                <label>Print Post</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>