force-app/main/default/objects/Contract/fields/APT_Request_T_C_Changes__c.field-meta.xml
<CustomField>
    <fullName>APT_Request_T_C_Changes__c</fullName>
    <formula>IF (
AND(
NOT( ISPICKVAL( Term_Exception_Approval_Status__c , &apos;Pending Approval&apos;) ),
OR(
 Total_Contract_Value__c &gt;  $Setup.APT_R2T_System_Properties__c.APT_Non_Standard_Contract_Threshold__c ,
ISBLANK(Total_Contract_Value__c )
),
OR(
ISPICKVAL(Status_Category__c,&quot;In Authoring&quot;),
ISPICKVAL(Status_Category__c,&quot;Request&quot;)
)), 
HYPERLINK(&quot;/apex/Apttus__AgreementTermExAdd?agreementId=&quot;+Id+&quot;&amp;retURL=/&quot;+Id, IMAGE(&quot;/resource/APT_Request_TC_Changes&quot;, &quot;Request Nonstandard T&amp;C&quot;), &quot;_self&quot;), NULL)</formula>
    <inlineHelpText>Total Contract Value must be above certain threshold set by Australia Post for this button to be available. Contract must be in &apos;Request&apos; or &apos;In Authoring&apos; Stage.</inlineHelpText>
    <label>Request T&amp;C Changes</label>
    <type>Text</type>
</CustomField>