force-app/main/default/objects/Contract/fields/APT_Require_Customer_Signature__c.field-meta.xml
<CustomField>
    <fullName>APT_Require_Customer_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Customer Signature?</label>
    <type>Checkbox</type>
</CustomField>