force-app/main/default/objects/Contract/fields/APT_Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>APT_Sales_Team__c</fullName>
    <description>Created for Ariba migration purposes, but to be reused it is being populated with name of the Role of the Owner, refreshed whenever Owner changes up until Agreement is Activated/Terminated/Expired/Cancelled</description>
    <inlineHelpText>Sales Team of the Owner of the Record</inlineHelpText>
    <label>Sales Team</label>
    <type>TextArea</type>
</CustomField>