force-app/main/default/objects/Contract/fields/APT_Send_For_eSignature_help_message__c.field-meta.xml
<CustomField>
    <fullName>APT_Send_For_eSignature_help_message__c</fullName>
    <formula>IF( 
AND( 
AND( 
OR( ISPICKVAL( Approval_Status__c , &apos;None&apos;) , 
ISPICKVAL( Approval_Status__c , &apos;Approved&apos;) 
), 
OR( ISPICKVAL( Term_Exception_Approval_Status__c , &apos;None&apos;) , 
ISPICKVAL( Term_Exception_Approval_Status__c , &apos;Approved&apos;) 
) 
) 
, 
OR( 
ISPICKVAL(Status_Category__c,&quot;In Authoring&quot;), 
(AND(ISPICKVAL(Status_Category__c,&quot;In Signatures&quot;), 
ISPICKVAL(Status__c,&quot;Ready for Signatures&quot;))), 
(AND(ISPICKVAL(Status_Category__c,&quot;In Signatures&quot;), 
ISPICKVAL(Status__c,&quot;Signature Declined&quot;))) 
)
), 
HYPERLINK(&quot;/apex/APT_HelptotheSeller?id=&quot;&amp;Id &amp;&quot;&amp;text&quot; &amp; &quot;&amp;name=&quot;&amp;Name, IMAGE(&quot;/resource/Apttus_DocuApi__eSignature&quot;,&quot;Send For eSignatures&quot;), &quot;_self&quot;), 
NULL 
)</formula>
    <label>Compile And Send For eSignature</label>
    <type>Text</type>
</CustomField>