force-app/main/default/objects/Contract/fields/APT_Send_for_SignatureAfterApproved__c.field-meta.xml
<CustomField>
    <fullName>APT_Send_for_SignatureAfterApproved__c</fullName>
    <formula>IF( 
AND( 
AND( 
OR( ISPICKVAL( Approval_Status__c , &apos;None&apos;) , 
ISPICKVAL( Approval_Status__c , &apos;Approved&apos;) 
), 
OR( ISPICKVAL( Term_Exception_Approval_Status__c , &apos;None&apos;) , 
ISPICKVAL( Term_Exception_Approval_Status__c , &apos;Approved&apos;) 
) 
) 
, 
OR( 
ISPICKVAL(Status_Category__c,&quot;In Authoring&quot;), 
(AND(ISPICKVAL(Status_Category__c,&quot;In Signatures&quot;), 
ISPICKVAL(Status__c,&quot;Ready for Signatures&quot;))), 
(AND(ISPICKVAL(Status_Category__c,&quot;In Signatures&quot;), 
ISPICKVAL(Status__c,&quot;Signature Declined&quot;))) 
),
IF(OR(Record_Type_Name__c =&quot;Community Update Pack&quot;,Record_Type_Name__c =&quot;MSA &amp; Service Schedule&quot;), 
IF(AND(ISPICKVAL(Related_Opportunity__r.Type, &quot;Existing Customer&quot;), OR(ISPICKVAL(RelatedProposalId__r.APT_Method_of_Payment__c,&quot;Charge Account&quot;),ISPICKVAL(RelatedProposalId__r.APT_Method_of_Payment__c,&quot;Charge Account + Sub Account&quot;)), NOT(ISPICKVAL(RelatedProposalId__r.APT_Credit_Assessment_Status__c,&quot;Approved&quot;))),FALSE,
IF(AND(ISPICKVAL(Related_Opportunity__r.Type, &quot;New Customer&quot;),OR(ISPICKVAL(RelatedProposalId__r.APT_Method_of_Payment__c,&quot;&quot;) , AND(OR(ISPICKVAL(RelatedProposalId__r.APT_Method_of_Payment__c,&quot;Charge Account&quot;),ISPICKVAL(RelatedProposalId__r.APT_Method_of_Payment__c,&quot;Charge Account + Sub Account&quot;)),NOT(ISPICKVAL(RelatedProposalId__r.APT_Credit_Assessment_Status__c,&quot;Approved&quot;))))),FALSE,TRUE)), TRUE)
), 
HYPERLINK(&quot;/apex/Apttus__SendEmail?id=&quot;&amp;Id &amp; &quot;&amp;action=Send_To_Other_Party_For_Signatures&quot;, IMAGE(&quot;/resource/Apttus__Button_SendForSignatures&quot;, &quot;Send For Signatures&quot;), &quot;_self&quot;), 
NULL 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Send for Signatures via Email from Salesforce</inlineHelpText>
    <label>Send For Signatures</label>
    <type>Text</type>
</CustomField>