force-app/main/default/objects/Contract/fields/APT_System_User__c.field-meta.xml
<CustomField>
    <fullName>APT_System_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer System User</description>
    <label>System User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (System User)</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>