force-app/main/default/objects/Contract/fields/APT_Template_Order_Sequence__c.field-meta.xml
<CustomField>
    <fullName>APT_Template_Order_Sequence__c</fullName>
    <label>Template Order/Sequence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>