force-app/main/default/objects/Contract/fields/APT_Timeframe_Required__c.field-meta.xml
<CustomField>
    <fullName>APT_Timeframe_Required__c</fullName>
    <description>Seller to populate preferred date by when they would like T&amp;C changes to be completed</description>
    <inlineHelpText>Preferred date by when changes to contracts are required</inlineHelpText>
    <label>Timeframe Required</label>
    <type>Date</type>
</CustomField>