force-app/main/default/objects/Contract/fields/APT_Trading_As__c.field-meta.xml
<CustomField>
    <fullName>APT_Trading_As__c</fullName>
    <description>For Templates purposes</description>
    <label>Trading As</label>
    <length>200</length>
    <type>Text</type>
</CustomField>