force-app/main/default/objects/Contract/fields/APT_Zone__c.field-meta.xml
<CustomField>
    <fullName>APT_Zone__c</fullName>
    <label>Zone</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>