force-app/main/default/objects/Contract/fields/Await_Signatures__c.field-meta.xml
<CustomField>
    <fullName>Await_Signatures__c</fullName>
    <label>Await Signatures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>