force-app/main/default/objects/Contract/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Apttus Contracts</relationshipLabel>
    <relationshipName>SFCon_Apttus_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>