force-app/main/default/objects/Contract/fields/ConfigurationFinalizedDate__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationFinalizedDate__c</fullName>
    <description>Date when the configuration was finalized for the agreement</description>
    <label>Configuration Finalized Date</label>
    <type>DateTime</type>
</CustomField>