force-app/main/default/objects/Contract/fields/ConfigurationSyncDate__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationSyncDate__c</fullName>
    <description>Date when the configuration was synchronized for the agreement</description>
    <inlineHelpText>Date when the configuration was synchronized for the contract</inlineHelpText>
    <label>Configuration Sync Date</label>
    <type>DateTime</type>
</CustomField>