force-app/main/default/objects/Contract/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>The end date for this agreement</description>
    <inlineHelpText>If contract is Open Ended this field represents Contract Anniversary Date

If Contract is Fixed Term this field represents Contract End Date (Expiration Date)</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>