force-app/main/default/objects/Contract/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>The effective date of the agreement</description>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>