force-app/main/default/objects/Contract/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of this agreement</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>