force-app/main/default/objects/Contract/fields/FF_Expire__c.field-meta.xml
<CustomField>
    <fullName>FF_Expire__c</fullName>
    <description>Expire the agreement</description>
    <formula>IF (OR(AND(ISPICKVAL(Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(Status__c,&quot;Being Renewed&quot;)))), HYPERLINK(&quot;/apex/Apttus__AgreementExpire?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_Expire&quot;, &quot;Expire&quot;),&quot;_self&quot;), NULL)</formula>
    <inlineHelpText>Expire the contract</inlineHelpText>
    <label>Expire</label>
    <type>Text</type>
</CustomField>