force-app/main/default/objects/Contract/fields/FF_Generate_Supporting_Document__c.field-meta.xml
<CustomField>
    <fullName>FF_Generate_Supporting_Document__c</fullName>
    <formula>IF (True, HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Generate_Supporting_Document&amp;templateType=Supporting_Document&quot;, IMAGE(&quot;/resource/Apttus__Button_GenerateSupportingDocument&quot;, &quot;Generate Supporting Document&quot;),&quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate Supporting Document</label>
    <type>Text</type>
</CustomField>