force-app/main/default/objects/Contract/fields/FF_Send_To_Third_Party__c.field-meta.xml
<CustomField>
    <fullName>FF_Send_To_Third_Party__c</fullName>
    <formula>IF (OR(ISPICKVAL(Status_Category__c,&quot;In Signatures&quot;), AND(ISPICKVAL(Status_Category__c,&quot;In Authoring&quot;),ISPICKVAL(Source__c,&quot;Other Party Paper&quot;))), HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b50000000l7uN&quot;&amp;&quot;&amp;eid=&quot;&amp;Id, &quot;Send To Other Party&quot;, &quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send To Other Party (OBSOLETE)</label>
    <type>Text</type>
</CustomField>