force-app/main/default/objects/Contract/fields/FF_View_Final_Contract__c.field-meta.xml
<CustomField>
    <fullName>FF_View_Final_Contract__c</fullName>
    <description>Conditionally show the &quot;Generate&quot; custom button if the contract status category is &quot;Request&quot;.</description>
    <formula>IF (ISPICKVAL(Status_Category__c, &quot;Request&quot;), HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Generate the contract</inlineHelpText>
    <label>Generate</label>
    <type>Text</type>
</CustomField>