force-app/main/default/objects/Contract/fields/Included_Product_Lines__c.field-meta.xml
<CustomField>
    <fullName>Included_Product_Lines__c</fullName>
    <inlineHelpText>Please select all of the product lines that will be covered by this contract</inlineHelpText>
    <label>Included Product Lines</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eParcels Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>BPA - RETURNS</fullName>
            </value>
            <value>
                <fullName>BPA - REPLY+RETURNS</fullName>
            </value>
            <value>
                <fullName>UMS</fullName>
            </value>
            <value>
                <fullName>Print Post</fullName>
            </value>
            <value>
                <fullName>Post Billpay OTC</fullName>
            </value>
            <value>
                <fullName>Post Billpay by Phone</fullName>
            </value>
            <value>
                <fullName>Post Billpay on the Internet</fullName>
            </value>
            <value>
                <fullName>Post Billpay Scan &amp; Pay</fullName>
            </value>
            <value>
                <fullName>Clean Mail</fullName>
            </value>
            <value>
                <fullName>Impact/Metered</fullName>
            </value>
            <value>
                <fullName>Local Country Letters</fullName>
            </value>
            <value>
                <fullName>Pre-Sort</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>SecurePay Online Payments</fullName>
            </value>
            <value>
                <fullName>Community Update</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
            <value>
                <fullName>Legacy Products</fullName>
            </value>
            <value>
                <fullName>On Demand</fullName>
            </value>
            <value>
                <fullName>Decipha</fullName>
            </value>
            <value>
                <fullName>Workforce Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>