force-app/main/default/objects/Contract/fields/Included_Term_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Included_Term_Exceptions__c</fullName>
    <description>System Used in Approvals</description>
    <inlineHelpText>System Used in Approvals</inlineHelpText>
    <label>Included Term Exceptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>