force-app/main/default/objects/Contract/fields/Is_Document_Signed__c.field-meta.xml
<CustomField>
    <fullName>Is_Document_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Document Signed ?</label>
    <type>Checkbox</type>
</CustomField>