force-app/main/default/objects/Contract/fields/Operational_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Operational_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detailed Operational Schedule (DOS)</label>
    <referenceTo>APT_Operational_Schedule__c</referenceTo>
    <relationshipLabel>Apttus Contracts</relationshipLabel>
    <relationshipName>SFCon_Apttus_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>