force-app/main/default/objects/Contract/fields/Parent_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Parent_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Main lookup field that links the parent contract and the child clone sf contract</description>
    <label>Original Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Salesforce Contract</relationshipLabel>
    <relationshipName>SFCon_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>