force-app/main/default/objects/Contract/fields/Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Risk_Rating__c</fullName>
    <description>This field allows users to track agreement risk rating</description>
    <label>Risk Rating</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>